--- a/.github/workflows/magisk.yml
+++ b/.github/workflows/magisk.yml
@@ -1,4 +1,4 @@
-name: Build WSA-TEST
+name: Build WSA
 on:
   workflow_dispatch:
     inputs:
@@ -391,7 +391,7 @@ jobs:
           echo '/dev/wsa-magisk(/.*)?    u:object_r:magisk_file:s0' | sudo tee -a system/vendor/etc/selinux/vendor_file_contexts
           echo '/data/adb/magisk(/.*)?   u:object_r:magisk_file:s0' | sudo tee -a system/vendor/etc/selinux/vendor_file_contexts
           ls
-          sudo ./magisk/magiskpolicy --load system/vendor/etc/selinux/precompiled_sepolicy --save system/vendor/etc/selinux/precompiled_sepolicy --magisk "allow * magisk_file lnk_file *"
+          sudo ./magisk/magiskpolicy --load system/vendor/etc/selinux/precompiled_sepolicy --save system/vendor/etc/selinux/precompiled_sepolicy --magisk "allow * magisk_file lnk_file *" || abort
           sudo tee -a system/system/etc/init/hw/init.rc <<EOF
 
           on post-fs-data
@@ -497,7 +497,7 @@ jobs:
           sudo patchelf --replace-needed libdl.so "${HOME}/libdl.so" ./magisk/magiskpolicy || abort
           sudo patchelf --set-interpreter "${HOME}/linker64" ./magisk/magiskpolicy || abort
           chmod +x ./magisk/magiskpolicy
-          sudo ./magisk/magiskpolicy --load system/vendor/etc/selinux/precompiled_sepolicy --save system/vendor/etc/selinux/precompiled_sepolicy "allow gmscore_app gmscore_app vsock_socket { create connect write read }" "allow gmscore_app device_config_runtime_native_boot_prop file read" "allow gmscore_app system_server_tmpfs dir search" "allow gmscore_app system_server_tmpfs file open"
+          sudo ./magisk/magiskpolicy --load system/vendor/etc/selinux/precompiled_sepolicy --save system/vendor/etc/selinux/precompiled_sepolicy "allow gmscore_app gmscore_app vsock_socket { create connect write read }" "allow gmscore_app device_config_runtime_native_boot_prop file read" "allow gmscore_app system_server_tmpfs dir search" "allow gmscore_app system_server_tmpfs file open" || abort
       - name: Fix GApps prop
         if: ${{ github.event.inputs.gapps_variant != 'none' && github.event.inputs.gapps_variant != '' }}
         shell: sudo python {0}
